# Test_Task_1

./: CMakeLists.txt  main_client.cpp  main_server.cpp
Client/: client.cpp  client.h
Logger/: logger.cpp  logger.h
Server/: server.cpp  server.h
